--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body{
+  background: linear-gradient(
+    to left,
+    rgba(7, 27, 82, 1) 0%,
+    rgba(0, 128, 128, 1) 100%
+  );
+}
 .App {
   text-align: center;
 }
@@ -35,4 +42,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+h1 {
+  font-family: 'Bigelow Rules';
+  font-size: 72px;
+  color: #0ccac4;
 }
